--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -1,3 +1,21 @@
-<p>
-  home works!
-</p>
+<div class="container color-dark">
+  <div class="col">
+    <p>Add a buscket list item</p>
+  </div>
+  <div class="col">
+    <p>Your bucket list</p>
+  </div>
+</div>
+
+<div class="container color-light">
+  <div class="col">
+    <p class="sm">Use this form to add a new bucket list goal. What do you want to do</p>
+    <form>
+      <input type="text" class="txt" name="item" placeholder="Task">
+      <input type=""
+    </form>
+  </div>
+  <div class="col">
+    <p>Your bucket list</p>
+  </div>
+</div>
