--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container color-dark">
   <div class="col">
-    <p>Add a buscket list item</p>
+    <p>Add a bucket list item</p>
   </div>
   <div class="col">
     <p>Your bucket list</p>
@@ -9,13 +9,14 @@
 
 <div class="container color-light">
   <div class="col">
-    <p class="sm">Use this form to add a new bucket list goal. What do you want to do</p>
+    <p class="sm">Use this form to add a new bucket list goal. What do you want to do? </p>
     <form>
       <input type="text" class="txt" name="item" placeholder="Task">
-      <input type=""
+      <input type="submit" class="btn" value="Add Item">
     </form>
   </div>
   <div class="col">
-    <p>Your bucket list</p>
+    <p class="life-container">hiking
+    </p>
   </div>
 </div>
