--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -11,8 +11,9 @@
   <div class="col">
     <p class="sm">Use this form to add a new bucket list goal. What do you want to do? </p>
     <form>
-      <input type="text" class="txt" name="item" placeholder="Task">
-      <input type="submit" class="btn" value="Add Item">
+      <input type="text" class="txt" name="item" placeholder="life goal..." [(ngModel)]="goalText">
+      <br><span>{{goalText}}</span>
+      <input type="submit" class="btn" [value]="btnText">
     </form>
   </div>
   <div class="col">
