--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -3,21 +3,21 @@
     <p>Add a bucket list item</p>
   </div>
   <div class="col">
-    <p>Your bucket list</p>
+    <p>Your bucket list: {{ itemCount }}</p>
   </div>
 </div>
 
-<div class="container color-light">
+<div class="container color-light" [@goals]="goals.length">
   <div class="col">
     <p class="sm">Use this form to add a new bucket list goal. What do you want to do? </p>
     <form>
       <input type="text" class="txt" name="item" placeholder="life goal..." [(ngModel)]="goalText">
-      <br><span>{{goalText}}</span>
-      <input type="submit" class="btn" [value]="btnText">
+      <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
   <div class="col">
-    <p class="life-container">hiking
+    <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeItem(i)">
+      {{ goal }}
     </p>
   </div>
 </div>
