modified background color and header

--- a/ng5/src/app/app.component.html
+++ b/ng5/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<header align="center">
+    <h1>ToDo Application</h1>
+</header>
+
 <ul>
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="">About</a></li>
