routing and modified scss

--- a/ng5/src/app/app.component.html
+++ b/ng5/src/app/app.component.html
@@ -5,10 +5,10 @@
 
 <ul>
   <li><a routerLink="">Home</a></li>
-  <li><a routerLink="">About</a></li>
+  <li><a routerLink="about/48">About</a></li>
 </ul>
 
- <app-home></app-home> <!--nesting our custom made Home component with the app component.
+ <!-- <app-home></app-home> <!--nesting our custom made Home component with the app component.
                            So this app-home is a selector name for home.component.ts file. 
                            we want to nest that home component into app.component.html -->
 <router-outlet></router-outlet>
