--- a/ng5/src/app/about/about.component.html
+++ b/ng5/src/app/about/about.component.html
@@ -1,3 +1,7 @@
 <p>
-  about works!
+  This is what I'm all about.<br>
+  <a href="" (click)="sendMeHome()">
+    <strong>Take me Back.</strong>
+  </a>
+
 </p>
