--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -11,7 +11,7 @@
   <div class="col">
     <p class="sm">Use this form to add a new bucket list goal. What do you want to do? </p>
     <form>
-      <input type="text" class="txt" name="item" placeholder="life goal..." [(ngModel)]="goalText">
+      <input type="text" class="txt" name="item" placeholder="Add a task" [(ngModel)]="goalText">
       <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
